--- a/templates/listing-lister-sale-confirmation.mjml
+++ b/templates/listing-lister-sale-confirmation.mjml
@@ -70,11 +70,10 @@
             You do not ship the item within the allotted time and do not receive approval for an extension.
           </mj-li>
           <mj-li font-size="16px" color="#000000" font-family="Red Hat Display">
-
             The delivered item does not match the listed item description. Buyers are asked to video record the unboxing and we routinely route items through trusted parties for quality assurance.
           </mj-li>
           <mj-li font-size="16px" color="#000000" font-family="Red Hat Display">
-            The item arrives damaged and you do not provide images that show you followed our packaging guidelines [here(link)].
+            The item arrives damaged and you do not provide images that show you followed our <a href="https://satscrap.com/seller-guidelines">packaging guidelines</a>.
           </mj-li>
         </mj-list>
 
@@ -101,7 +100,7 @@
         </mj-list>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          [Project Notso] will release sale proceeds (minus a 10% commission fee, adjusted for your listing listing deposit) to the Bitcoin address you provide with the shipment tracking number within 7 days after delivery has been confirmed.
+          SatsCrap will release sale proceeds (minus a 10% commission fee, adjusted for your listing listing deposit) to the Bitcoin address you provide with the shipment tracking number within 7 days after delivery has been confirmed.
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
