feat(listing-live): add tracking info

--- a/templates/listing-live.mjml
+++ b/templates/listing-live.mjml
@@ -65,7 +65,7 @@
           </mj-li>
 
           <mj-li font-size="16px" color="#000000" font-family="Red Hat Display">
-            The item sells, and you do not ship it within the allotted time.
+            The item sells and you do not ship it with tracking within the allotted time.
           </mj-li>
 
           <mj-li font-size="16px" color="#000000" font-family="Red Hat Display">
