feat(copy): edit tracking copy

--- a/templates/listing-lister-sale-confirmation.mjml
+++ b/templates/listing-lister-sale-confirmation.mjml
@@ -59,7 +59,7 @@
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          <strong>To fully cover the risk of the package being stolen and buyer fraud, you must require the recipient to sign for the delivery.</strong>
+          <strong>To fully cover the risk of the package being stolen and buyer fraud, you must provide tracking and require the recipient to sign for the delivery.</strong>
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
