chore(copy): fix

--- a/templates/listing-lister-sale-confirmation.mjml
+++ b/templates/listing-lister-sale-confirmation.mjml
@@ -79,6 +79,7 @@
           </mj-li>
           <mj-li font-size="16px" color="#000000" font-family="Red Hat Display">
             The item arrives damaged and you do not provide images that show you followed our <a href="https://satscrap.com/seller-guidelines">packaging guidelines</a>.
+            <em>Be aware that if an item is sent without tracking and signature requirement and the buyer claims to not receive it, we can not distribute proceeds to you.</em>
           </mj-li>
         </mj-list>
 
