--- a/templates/listing-buyer-purchase-confirmation.mjml
+++ b/templates/listing-buyer-purchase-confirmation.mjml
@@ -52,7 +52,7 @@
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          Once the item ships, we’ll share tracking information and instructions for receiving the item.
+          The seller is expected to ship the item within one week. Once the item ships, we’ll share tracking information and instructions for receiving the item.
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
