--- a/templates/lister-delist-refund.mjml
+++ b/templates/lister-delist-refund.mjml
@@ -23,6 +23,10 @@
   <mj-body>
     <mj-section>
       <mj-column background-color="#ffffff">
+        <mj-image width="420px" src="https://satscrap.com/logo.png"></mj-image>
+
+        <mj-divider border-color="#000000"></mj-divider>
+
         <mj-text font-size="16px" font-family="Red Hat Display">
           Your sale listing for {{ productName }} has been canceled.
         </mj-text>
