--- a/templates/listing-buyer-purchase-confirmation.mjml
+++ b/templates/listing-buyer-purchase-confirmation.mjml
@@ -47,6 +47,10 @@
   <mj-body>
     <mj-section>
       <mj-column background-color="#ffffff">
+        <mj-image width="420px" src="https://satscrap.com/logo.png"></mj-image>
+
+        <mj-divider border-color="#000000"></mj-divider>
+
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
           Your payment for {{ productName }} has confirmed.
         </mj-text>
