--- a/templates/listing-live.mjml
+++ b/templates/listing-live.mjml
@@ -52,7 +52,7 @@
         <mj-divider border-color="#000000"></mj-divider>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          Your sale listing is live. Click <a href="{{ listingsListUrl }}">here</a> (do <strong>NOT</strong> share this link with anyone as it is a secret link that allows you to edit or delete your listing) to view and edit all your listings.
+          Your sale listing is live. Click <a href="{{ listingsListUrl }}">here to view, edit, or delete</a> any of your listings. Do <strong>NOT</strong> share this link with anyone.
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
