--- a/templates/auction-buyer-winner-confirmation.mjml
+++ b/templates/auction-buyer-winner-confirmation.mjml
@@ -38,7 +38,7 @@
         <mj-divider border-color="#000000"></mj-divider>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          Congratulations {{ winnerName }}! You've won the Lightning Auction for <span class="font-bold text-black">{{ auctionTitle }}</span>!
+          Congratulations {{ winnerName }}! You've won the auction for <span class="font-bold text-black">{{ auctionTitle }}</span>!
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display" font-weight="bold">
