--- a/templates/auction-buyer-winner-confirmation.mjml
+++ b/templates/auction-buyer-winner-confirmation.mjml
@@ -74,9 +74,10 @@
           Please let me know if you have any questions.
         </mj-text>
 
-        <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">Chris<br />
-          <a href="https://scarce.city">
-            Scarce City</a>
+        <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">Happy Bidding,<br />
+          <a href="https://satscrap.com">
+            SatsCrap
+          </a>
         </mj-text>
       </mj-column>
     </mj-section>
