--- a/templates/email-verification.mjml
+++ b/templates/email-verification.mjml
@@ -54,9 +54,10 @@
           Please let me know if you have any questions.
         </mj-text>
 
-        <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          Chris<br />
-          <a href="https://satscrap.com">SatsCrap</a>
+        <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">Happy Selling,<br />
+          <a href="https://satscrap.com">
+            SatsCrap
+          </a>
         </mj-text>
       </mj-column>
     </mj-section>
