--- a/templates/listing-buyer-purchase-confirmation.mjml
+++ b/templates/listing-buyer-purchase-confirmation.mjml
@@ -62,6 +62,12 @@
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
           Please let us know if you have any questions.
         </mj-text>
+
+        <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">Happy Bidding,<br />
+          <a href="https://satscrap.com">
+            SatsCrap
+          </a>
+        </mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
