--- a/templates/auction-non-winning-bidder-refund.mjml
+++ b/templates/auction-non-winning-bidder-refund.mjml
@@ -11,9 +11,19 @@
         text-decoration: underline;
       }
 
-      a,
-      body,
-      tr {
+      .text-black {
+        color: #000;
+      }
+
+      .italic {
+        font-style: italic
+      }
+
+      .font-bold {
+        font-weight: bold;
+      }
+
+      body {
         font-family: 'Red Hat Display', 'Arial'
       }
     </mj-style>
@@ -28,24 +38,21 @@
         <mj-divider border-color="#000000"></mj-divider>
 
         <mj-text font-size="16px" font-family="Red Hat Display">
-          Your sale listing for {{ productName }} has been canceled.
-        </mj-text>
-
-        <mj-text font-size="16px" font-family="Red Hat Display">
-          Redeem your listing deposit of {{ refundAmountInSats }} sats by scanning the LNURL QR code with your Lightning wallet.
+          Your bid deposit refund of {{ refundAmountInSats }} sats is now available to be redeemed. Scan the QR code with your Lightning wallet to redeem it immediately.
         </mj-text>
 
         <mj-image height="300px" width="300px" src="cid:{{ lnurl }}.jpg"></mj-image>
+
         <mj-text font-size="16px" font-family="Red Hat Display">
           {{ lnurl }}
         </mj-text>
 
         <mj-text font-size="16px" font-family="Red Hat Display">
-          If you're not able to withdraw from the LNURL QR code, please reply with a Lightning invoice of the amount owed or your on-chain Bitcoin receive address. We will pay it ASAP.
+          If you're not able to withdraw from the LNURL QR code, please reply with a Lightning invoice of the amount owed or your on-chain Bitcoin receive address. Please allow up to 48 hours for on-chain refunds to be processed.
         </mj-text>
 
         <mj-text font-size="16px" font-family="Red Hat Display">
-          Thanks for trying us out. We hope you’ll list your items for sale with us again in the future.
+          Thank you for participating in the auction!
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">Happy Selling,<br />
