--- a/templates/auction-lister-purchase-confirmation.mjml
+++ b/templates/auction-lister-purchase-confirmation.mjml
@@ -47,7 +47,7 @@
   <mj-body>
     <mj-section>
       <mj-column background-color="#ffffff">
-        <mj-image width="420px" src="https://satscrap.com/logo-black.png"></mj-image>
+        <mj-image width="420px" src="https://satstash.io/logo-black.png"></mj-image>
 
         <mj-divider border-color="#000000"></mj-divider>
 
@@ -124,7 +124,7 @@
         </mj-list>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          SatsCrap will release sale proceeds (adjusted for fees and your auction deposit) in bitcoin redeemable onchain or Lightning by email within 4 days of delivery confirmation.
+          SatStash will release sale proceeds (adjusted for fees and your auction deposit) in bitcoin redeemable onchain or Lightning by email within 4 days of delivery confirmation.
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
@@ -132,8 +132,8 @@
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">Happy Selling,<br />
-          <a href="https://satscrap.com">
-            SatsCrap
+          <a href="https://satstash.io">
+            SatStash
           </a>
         </mj-text>
       </mj-column>
