--- a/templates/auction-listing-email.mjml
+++ b/templates/auction-listing-email.mjml
@@ -47,7 +47,7 @@
   <mj-body>
     <mj-section>
       <mj-column background-color="#ffffff">
-        <mj-image width="420px" src="https://satscrap.com/logo-black.png"></mj-image>
+        <mj-image width="420px" src="https://satstash.io/logo-black.png"></mj-image>
 
         <mj-divider border-color="#000000"></mj-divider>
 
@@ -72,7 +72,7 @@
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          SatsCrap will release your sale proceeds and listing deposit refund in bitcoin by email within 4 days of delivery confirmation.
+          SatStash will release your sale proceeds and listing deposit refund in bitcoin by email within 4 days of delivery confirmation.
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
@@ -98,7 +98,7 @@
         </mj-list>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          See our <a href="https://satscrap.com/seller-guidelines">Seller Guidelines</a> for details.
+          See our <a href="https://satstash.io/seller-guidelines">Seller Guidelines</a> for details.
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
@@ -110,8 +110,8 @@
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">Happy Selling,<br />
-          <a href="https://satscrap.com">
-            SatsCrap
+          <a href="https://satstash.io">
+            SatStash
           </a>
         </mj-text>
       </mj-column>
