--- a/templates/listing-lister-sale-confirmation.mjml
+++ b/templates/listing-lister-sale-confirmation.mjml
@@ -47,7 +47,7 @@
   <mj-body>
     <mj-section>
       <mj-column background-color="#ffffff">
-        <mj-image width="420px" src="https://satscrap.com/logo-black.png"></mj-image>
+        <mj-image width="420px" src="https://satstash.io/logo-black.png"></mj-image>
 
         <mj-divider border-color="#000000"></mj-divider>
 
@@ -84,7 +84,7 @@
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          <strong>To fully cover the risk of the package being stolen and buyer fraud, you must provide tracking, require the recipient to sign for the delivery, and share images of the packaging meeting our <a href="https://satscrap.com/seller-guidelines">seller guidelines</a></<strong>
+          <strong>To fully cover the risk of the package being stolen and buyer fraud, you must provide tracking, require the recipient to sign for the delivery, and share images of the packaging meeting our <a href="https://satstash.io/seller-guidelines">seller guidelines</a></<strong>
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
@@ -112,7 +112,7 @@
         </mj-list>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
-          SatsCrap will release sale proceeds (minus a 10% commission fee, adjusted for your listing listing deposit) to the Bitcoin address you provide with the shipment tracking number within 7 days after delivery has been confirmed.
+          SatStash will release sale proceeds (minus a 10% commission fee, adjusted for your listing listing deposit) to the Bitcoin address you provide with the shipment tracking number within 7 days after delivery has been confirmed.
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">
@@ -120,8 +120,8 @@
         </mj-text>
 
         <mj-text font-size="16px" color="#000000" font-family="Red Hat Display">Happy Selling,<br />
-          <a href="https://satscrap.com">
-            SatsCrap
+          <a href="https://satstash.io">
+            SatStash
           </a>
         </mj-text>
       </mj-column>
