fix(email-copy): adjust email copy specified by chris

--- a/templates/auction-listing-email.mjml
+++ b/templates/auction-listing-email.mjml
@@ -81,7 +81,7 @@
 
         <mj-list>
           <mj-li font-size="16px" color="#000000" font-family="Red Hat Display">
-            You attempt to list contraband. See this list for guidance.
+            You attempt to list contraband.
           </mj-li>
 
           <mj-li font-size="16px" color="#000000" font-family="Red Hat Display">
